--- a/JAVASCRİPT/Enes Bayram/57 Events(Olaylar) Nasıl Kullanılır/index.html
+++ b/JAVASCRİPT/Enes Bayram/57 Events(Olaylar) Nasıl Kullanılır/index.html
@@ -59,7 +59,8 @@
                               
                               </ul>
         
-                              <a href="#"  id="clearButton"  class="btn btn-primary btn-sm mt-3">Tüm Todoları Temizle</a>
+                              <a href="#" 
+                              id="clearButton"  class="btn btn-primary btn-sm mt-3">Tüm Todoları Temizle</a>
                         </div>
                 </div>
 
