--- a/JAVASCRİPT/Enes Bayram/93 Uygulama #2 Bölüm 1 Döviz Kuru Uygulaması/index.html
+++ b/JAVASCRİPT/Enes Bayram/93 Uygulama #2 Bölüm 1 Döviz Kuru Uygulaması/index.html
@@ -57,7 +57,7 @@
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
            
             <select id="secondCurrencyOption">
-                <option selected>USD</option>
+                <option>USD</option>
                 <option>EUR</option>
                 <option>JPY</option>
                 <option>BGN</option>
@@ -73,7 +73,7 @@
                 <option>NOK</option>
                 <option>HRK</option>
                 <option>RUB</option>
-                <option>TRY</option>
+                <option selected>TRY</option>
                 <option>AUD</option>
                 <option>BRL</option>
                 <option>CAD</option>
@@ -93,13 +93,13 @@
             </select>
 
             <input type="number" id="result" readonly placeholder="Sonuç"/>
-            <span>Copyright - Emre Kradağ</span>
+            <span>Copyright - Emre Karadağ</span>
         </div>
     </div>
    </div>
 
-
-   <script src="main.js"></script>
    <script src="currency.js"></script>
+   <script src="main.js"></script>
+   
 </body>
 </html>
